--- a/src/Dash/assets/style.css
+++ b/src/Dash/assets/style.css
@@ -1,21 +1,32 @@
 :root {
-  --bg-light: #434343;
-  --bg-dark: #191a1a;
+  /* --bg-dark: #434343; */
+  /* --bg-darker: #191a1a; */
+  --bg-dark: #222437;
+  --bg-darker: #1c1e2f;
 }
 
 html, body {
-  background-color: var(--bg-dark);
+  background-color: var(--bg-darker);
 }
 
 .root {
 }
 
-.tab1 {
-
+.tab1,
+.tab2,
+.tab3,
+.tab4 {
+  background-color: var(--bg-dark) !important;
+  color: #fff !important;
 }
 
-.tab1.tab--selected {
-  /* background-color: ; */
+.tab1.tab--selected,
+.tab2.tab--selected,
+.tab3.tab--selected,
+.tab4.tab--selected {
+  background-color: var(--bg-darker) !important;
+  color: #fff !important;
+  border-top: 2px solid #fff !important;
 }
 
 .tab1-container {
@@ -23,7 +34,7 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--bg-dark);
+  background-color: var(--bg-darker);
 }
 
 .tab1-form {
@@ -33,9 +44,8 @@ html, body {
   margin: 3em 0 1.5em;
   padding: 2em 0;
   color: #fff;
-  background-color: var(--bg-light);
-  width: 75%;
-  border-radius: 1em;
+  background-color: var(--bg-dark);
+  width: 80%;
 }
 
 .tab1-form-title {
@@ -52,6 +62,19 @@ html, body {
   margin: 0 5%;
 }
 
+.dash-dropdown .Select-value {
+  background-color: var(--bg-dark);
+}
+
+.dash-dropdown .Select-value .Select-value-label {
+  color: #fff !important;
+}
+
+.dash-dropdown .Select-menu-outer {
+  background-color: var(--bg-dark);
+  color: #fff;
+}
+
 .tab1-dropdown-labels {
   margin: .75em 0 .25em;
 }
@@ -61,15 +84,18 @@ html, body {
   margin-left: 5%;
   border-color: #fff;
   color: #fff;
-};
-
-.tab2 {
-
 }
+
+/* .tab1-update-btn:active {
+  border-color: #fff;
+  color: #fff;
+} */
 
 .tab2-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 4em;
 }
 
 .tab2-map-wrapper {
@@ -78,36 +104,53 @@ html, body {
   align-items: center;
 }
 
+.tab2-map-info {
+  font-size: 1.6rem;
+  margin-top: 1em;
+  color: #fff;
+}
+
 .tab2-graphs-wrapper {
   display: flex;
   flex-direction: column;
-  width: 50%;
 }
 
-.tab2-map-info {
-  color: #fff;
-  transform: translateY(-4em);
+.tab2-graphs-slider {
+  margin-top: 1em;
+  padding-top: 1em !important;
+  background-color: var(--bg-dark);
 }
 
-.tb3-container {
+.tab3-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.tb3-model-select {
+.tab3-model-select,
+.tab4-model-select {
   display: flex;
   justify-content: center;
-  margin-top: 1em;
-  font-size: 2rem;
-  transform: translateY(1.5em);
+  margin-top: 2em;
+  font-size: 1.8rem;
   color: #fff;
   z-index: 100;
 }
 
-.tb3-model-title {
-  font-size: 2rem;
+.tab3-model-info {
+  margin: 1em 0;
+  font-size: 1.6rem;
   color: #fff;
-  transform: translateY(3.5em);
   z-index: 100;
+}
+
+.tab4-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tab2-map-filter,
+.tab3-map-filter {
+  opacity: 0.9;
 }
