--- a/src/Dash/assets/style.css
+++ b/src/Dash/assets/style.css
@@ -84,12 +84,17 @@ html, body {
   margin-left: 5%;
   border-color: #fff;
   color: #fff;
+  transition: transform .2s ease-in-out;
 }
 
-/* .tab1-update-btn:active {
-  border-color: #fff;
-  color: #fff;
-} */
+.tab1-update-btn:focus {
+  border-color: #fff !important;
+  color: #fff !important;
+}
+
+.tab1-update-btn:active {
+  transform: scale(.95);
+}
 
 .tab2-container {
   display: flex;
@@ -122,6 +127,28 @@ html, body {
   background-color: var(--bg-dark);
 }
 
+.rc-slider-dot-active,
+.rc-slider-handle {
+  border-color: #fff !important;
+}
+
+.rc-slider-track {
+  background-color: #fff !important
+}
+
+.rc-slider-rail {
+  background-color: var(--bg-dark) !important
+}
+
+.rc-slider-mark-text-active {
+  color: #fff !important;
+}
+
+.tab2-map-filter,
+.tab3-map-filter {
+  opacity: 0.9;
+}
+
 .tab3-container {
   display: flex;
   flex-direction: column;
@@ -149,9 +176,4 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.tab2-map-filter,
-.tab3-map-filter {
-  opacity: 0.9;
 }
