--- a/src/Dash/assets/style.css
+++ b/src/Dash/assets/style.css
@@ -5,18 +5,33 @@
   --bg-darker: #1c1e2f;
 }
 
-html,
-body {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
   background-color: var(--bg-darker);
 }
 
+svg,
+canvas {
+  border-radius: 6px;
+}
+
+input[type='radio'] {
+  margin-right: 4px;
+}
+
 input[type='radio']:after {
-  width: 10px;
-  height: 10px;
-  border-radius: 10px;
-  top: -2px;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -1px;
   left: -1px;
   position: relative;
   background-color: #d1d3d1;
@@ -27,10 +42,10 @@ input[type='radio']:after {
 }
 
 input[type='radio']:checked:after {
-  width: 10px;
-  height: 10px;
-  border-radius: 10px;
-  top: -2px;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -1px;
   left: -1px;
   position: relative;
   background-color: #6646ed;
@@ -40,9 +55,71 @@ input[type='radio']:checked:after {
   border: 2px solid white;
 }
 
+.model-selection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
+  font-size: 1.8rem;
+  color: #fff;
+  z-index: 100;
+}
+
+.model-selection-items {
+  display: flex;
+}
+
+.dropdown-labels {
+  margin: .75em 0 .25em;
+}
+
+.dash-dropdown .Select-value {
+  background-color: var(--bg-dark);
+}
+
+.dash-dropdown .Select-value .Select-value-label {
+  color: #fff !important;
+}
+
+.dash-dropdown .Select-menu-outer {
+  background-color: var(--bg-dark);
+  color: #fff;
+}
+
+.slider {
+  width: 100%;
+  padding-bottom: 30px !important;
+  background-color: var(--bg-dark);
+  border-radius: 6px;
+}
+
+.slider-title {
+  font-size: 1.6rem;
+  color: #fff;
+  text-align: center;
+  margin: .5em 0 .5em;
+}
+
+.rc-slider-dot-active,
+.rc-slider-handle {
+  border-color: #fff !important;
+}
+
+.rc-slider-track {
+  background-color: #fff !important
+}
+
+.rc-slider-rail {
+  background-color: var(--bg-dark) !important
+}
+
+.rc-slider-mark-text-active {
+  color: #fff !important;
+}
+
 .card {
   padding: 1em 1.5em;
-  box-shadow: 2px 2px 5px 0px rgba(255,255,255,.2);
+  box-shadow: 0px 1px 5px 0px rgba(255,255,255,.2);
   border-radius: 6px;
   background-color: var(--bg-dark);
 }
@@ -62,11 +139,12 @@ input[type='radio']:checked:after {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 2rem 0;
 }
 
 .header-title {
   color: #fff;
-  margin: 2rem 5rem 2rem 0;
+  margin: 0 1em 0 0;
 }
 
 .header-logo {
@@ -91,8 +169,15 @@ input[type='radio']:checked:after {
   border-top: 2px solid #fff !important;
 }
 
-.tab1-container {
+.tab1-container,
+.tab2-container,
+.tab3-container,
+.tab4-container {
   display: flex;
+  padding: 4rem 0;
+}
+
+.tab1-container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -101,16 +186,18 @@ input[type='radio']:checked:after {
 
 .tab1-header {
   display: flex;
-  margin: 3em 0 1.5em;
+  margin-bottom: 1.5em;
   width: 80%;
 }
 
 .tab1-info {
-  width: 20%;
+  width: 30%;
   color: #fff;
   margin-left: 2em;
   padding: 2em;
   background-color: var(--bg-dark);
+  box-shadow: 0px 1px 5px 0px rgba(255,255,255,.2);
+  border-radius: 6px;
 }
 
 .tab1-info-title {
@@ -129,13 +216,15 @@ input[type='radio']:checked:after {
 }
 
 .tab1-form {
+  width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 2em 0;
   color: #fff;
   background-color: var(--bg-dark);
-  width: 80%;
+  box-shadow: 0px 1px 5px 0px rgba(255,255,255,.2);
+  border-radius: 6px;
 }
 
 .tab1-form-title {
@@ -150,23 +239,6 @@ input[type='radio']:checked:after {
 .tab1-dropdown-group {
   width: 100%;
   margin: 0 5%;
-}
-
-.dash-dropdown .Select-value {
-  background-color: var(--bg-dark);
-}
-
-.dash-dropdown .Select-value .Select-value-label {
-  color: #fff !important;
-}
-
-.dash-dropdown .Select-menu-outer {
-  background-color: var(--bg-dark);
-  color: #fff;
-}
-
-.tab1-dropdown-labels {
-  margin: .75em 0 .25em;
 }
 
 .tab1-update-btn {
@@ -187,62 +259,47 @@ input[type='radio']:checked:after {
 }
 
 .tab2-container {
-  display: flex;
-  flex-direction: column;
-  margin-top: 3em;
-}
-
-.tab2-header {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 2em;
-}
-
-.tab2-wrapper {
-  display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.tab2-side-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tab2-cards-wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 2.5em;
+}
+
+.tab2-slider-wrapper {
+  width: 100%;
+  margin-bottom: 2.5em;
+  background-color: var(--bg-dark);
+  box-shadow: 0px 1px 5px 0px rgba(255,255,255,.2);
+  border-radius: 6px;
 }
 
 .tab2-map-wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.tab2-map-info {
+.tab2-map-title {
   font-size: 1.6rem;
-  margin: 1em 0 .5em;
+  margin: 0 0 .5em;
   color: #fff;
 }
 
 .tab2-graphs-wrapper {
   display: flex;
   flex-direction: column;
-  width: 50%;
-}
-
-.tab2-graphs-slider {
-  margin-top: 1em;
-  padding-top: 1em !important;
-  background-color: var(--bg-dark);
-}
-
-.rc-slider-dot-active,
-.rc-slider-handle {
-  border-color: #fff !important;
-}
-
-.rc-slider-track {
-  background-color: #fff !important
-}
-
-.rc-slider-rail {
-  background-color: var(--bg-dark) !important
-}
-
-.rc-slider-mark-text-active {
-  color: #fff !important;
 }
 
 .tab2-map-filter,
@@ -251,19 +308,8 @@ input[type='radio']:checked:after {
 }
 
 .tab3-container {
-  display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.tab3-model-select,
-.tab4-model-select {
-  display: flex;
-  justify-content: center;
-  margin-top: 2em;
-  font-size: 1.8rem;
-  color: #fff;
-  z-index: 100;
 }
 
 .tab3-model-info {
@@ -274,7 +320,6 @@ input[type='radio']:checked:after {
 }
 
 .tab4-container {
-  display: flex;
   flex-direction: column;
   align-items: center;
 }
