--- a/src/Dash/assets/style.css
+++ b/src/Dash/assets/style.css
@@ -468,7 +468,7 @@ input[type='radio']:checked:after {
 .tab4-container {
   flex-direction: column;
   align-items: center;
-  margin-bottom: 97px;
+  height: calc(100vh - 110px - 66px - 18px - 12px);
 }
 
 .tab4-graphs-wrapper {
