--- a/src/Dash/assets/style.css
+++ b/src/Dash/assets/style.css
@@ -265,6 +265,10 @@ input[type='radio']:checked:after {
   height: 70px;
 }
 
+.tabs {
+  min-height: calc(100% - 110px - 18px - 11.5px); 
+}
+
 .tab1,
 .tab2,
 .tab3,
@@ -468,7 +472,6 @@ input[type='radio']:checked:after {
 .tab4-container {
   flex-direction: column;
   align-items: center;
-  height: calc(100vh - 110px - 66px - 18px - 12px);
 }
 
 .tab4-graphs-wrapper {
